--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -110,7 +110,7 @@
       }
 
       &__logo {
-        margin: 0 1.5rem;
+        margin: 0 1rem;
         display: inline-flex;
         justify-content: center;
         flex-grow: 4;
@@ -141,7 +141,7 @@
 
         a {
           font-weight: 800;
-          font-size: 14px;
+          font-size: 12px;
         }
       }
     }
@@ -160,7 +160,7 @@
         height: 1.5rem;
 
         @include resolve(xs) {
-          margin: 0 1.5rem;
+          margin: 0 1rem 0 1rem;
         }
 
         margin: 0 0 0 42%;
@@ -274,6 +274,10 @@
 
         > div {
           padding-top: 3rem;
+
+          > a {
+            text-decoration: underline;
+          }
         }
 
         .m-contacts__social_wrap {
@@ -486,8 +490,8 @@
             box-sizing: border-box;
             border-radius: 0.25rem;
 
-            &:hover{
-              cursor: pointer
+            &:hover {
+              cursor: pointer;
             }
           }
         }
